<resources>
    <string name="app_name">RepositorySearch</string>
    <string name="search">검색</string>
    <string name="me">나</string>
    <string name="main_title">What\'s In My Github</string>
    <string name="search_eng">Search</string>
    <string name="profile_eng">Profile</string>
    <string name="followers">Followers</string>
    <string name="followers_following_divider">・</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="starred">Starred</string>
    <string name="filter">Filter</string>
    <string name="option">Option</string>
    <string name="search_github">Search GitHub</string>
    <string name="error">Error: %s</string>
</resources>