<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="user"
            type="com.woowahan.domain.model.User" />
        <variable
            name="vm"
            type="com.woowahan.repositorysearch.ui.result.fragment.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/black"
        tools:context=".ui.result.fragment.ProfileFragment">

        <include
            android:id="@+id/layout_load_error_checker"
            layout="@layout/layout_load_error_checker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:visibility="@{vm.isLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{vm.isLoading ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_user_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:loadImage="@{user.avatar}"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@{user.name}"
                app:layout_constraintStart_toEndOf="@+id/cv_user_icon"
                app:layout_constraintTop_toTopOf="@+id/cv_user_icon"
                tools:text="멋진 삼" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ko_pub_dotum"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@{user.login}"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="sam" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ko_pub_dotum"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:background="@drawable/bg_type"
                android:padding="5dp"
                android:visibility='@{user.company.length() == 0 ? View.GONE : View.VISIBLE}'
                android:text="@{user.company}"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toStartOf="@+id/tv_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_login"
                tools:text="Android Developer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_type">

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/navy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_location"
                    android:visibility='@{user.location.length() == 0 ? View.GONE : View.VISIBLE}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility='@{user.location.length() == 0 ? View.GONE : View.VISIBLE}'
                    android:text="@{user.location}"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_location"
                    app:layout_constraintStart_toEndOf="@+id/iv_location"
                    app:layout_constraintTop_toTopOf="@+id/iv_location"
                    tools:text="Seoul, Korea" />

                <ImageView
                    android:id="@+id/iv_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_link"
                    android:visibility='@{user.blog.length() == 0 ? View.GONE : View.VISIBLE}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_location" />

                <TextView
                    android:id="@+id/tv_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility='@{user.blog.length() == 0 ? View.GONE : View.VISIBLE}'
                    android:text="@{user.blog}"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_link"
                    app:layout_constraintStart_toEndOf="@+id/iv_link"
                    app:layout_constraintTop_toTopOf="@+id/iv_link"
                    tools:text="http://medium.com/@sam" />

                <ImageView
                    android:id="@+id/iv_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_mail"
                    android:visibility='@{user.mail.length() == 0 ? View.GONE : View.VISIBLE}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_link" />

                <TextView
                    android:id="@+id/tv_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:visibility='@{user.mail.length() == 0 ? View.GONE : View.VISIBLE}'
                    android:text="@{user.mail}"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_mail"
                    app:layout_constraintStart_toEndOf="@+id/iv_mail"
                    app:layout_constraintTop_toTopOf="@+id/iv_mail"
                    tools:text="sam@gmail.com" />

                <ImageView
                    android:id="@+id/iv_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_mail" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@{Integer.toString(user.followers)}"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_follow"
                    app:layout_constraintStart_toEndOf="@+id/iv_follow"
                    app:layout_constraintTop_toTopOf="@+id/iv_follow"
                    tools:text="59" />

                <TextView
                    android:id="@+id/tv_followers_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:text="@string/followers"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_followers"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers"
                    app:layout_constraintTop_toTopOf="@+id/tv_followers" />

                <TextView
                    android:id="@+id/tv_followers_following_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:text="@string/followers_following_divider"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_followers_title"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_followers_title" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@{Integer.toString(user.following)}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_followers_following_divider"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers_following_divider"
                    app:layout_constraintTop_toTopOf="@+id/tv_followers_following_divider"
                    tools:text="6" />

                <TextView
                    android:id="@+id/tv_following_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:text="@string/following"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_following"
                    app:layout_constraintStart_toEndOf="@+id/tv_following"
                    app:layout_constraintTop_toTopOf="@+id/tv_following" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:padding="25dp"
                android:background="@drawable/bg_user_info"
                app:layout_constraintTop_toBottomOf="@id/constraint_user_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/view_repositories_bg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_repo_starred_icon"
                    android:padding="18dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_repositories"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_bookmark"
                    app:layout_constraintBottom_toBottomOf="@+id/view_repositories_bg"
                    app:layout_constraintEnd_toEndOf="@+id/view_repositories_bg"
                    app:layout_constraintStart_toStartOf="@+id/view_repositories_bg"
                    app:layout_constraintTop_toTopOf="@+id/view_repositories_bg" />

                <TextView
                    android:id="@+id/tv_repositories_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repositories"
                    android:textSize="20sp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/view_repositories_bg"
                    app:layout_constraintStart_toEndOf="@+id/view_repositories_bg"
                    app:layout_constraintTop_toTopOf="@+id/view_repositories_bg" />

                <TextView
                    android:id="@+id/tv_repositories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="29"
                    android:text="@{Integer.toString(user.repositories)}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_repositories_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_repositories_title" />

                <View
                    android:id="@+id/view_starred_bg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_repo_starred_icon"
                    android:padding="18dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_repositories" />

                <ImageView
                    android:id="@+id/iv_starred"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_star_outlined"
                    app:layout_constraintBottom_toBottomOf="@+id/view_starred_bg"
                    app:layout_constraintEnd_toEndOf="@+id/view_starred_bg"
                    app:layout_constraintStart_toStartOf="@+id/view_starred_bg"
                    app:layout_constraintTop_toTopOf="@+id/view_starred_bg" />

                <TextView
                    android:id="@+id/tv_starred_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starred"
                    android:textSize="20sp"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/view_starred_bg"
                    app:layout_constraintStart_toEndOf="@+id/view_starred_bg"
                    app:layout_constraintTop_toTopOf="@+id/view_starred_bg" />

                <TextView
                    android:id="@+id/tv_starred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ko_pub_dotum"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="29"
                    android:text="@{Integer.toString(user.starredSize)}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_starred_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_starred_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>